--- a/03-container-spacing/index.html
+++ b/03-container-spacing/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Container -->
-    <div>
+    <div class="container mx-auto">
       <article>
         <h3>Article One</h3>
         <p>
@@ -21,12 +21,43 @@
       </article>
 
       <!-- Margin -->
+      <div class="bg-slate-100 m-2">Hellow World</div>
+      <div class="bg-slate-100 ml-4">Hellow World</div>
+      <div class="bg-slate-100 mr-4">Hellow World</div>
+      <div class="bg-slate-100 mt-4">Hellow World</div>
+      <div class="bg-slate-100 mb-4">Hellow World</div>
+      <!-- 아래와 같이 수치를 매기는 것은 유지보수에 굉장히 취약하므로 그냥 기본 단위를 config로 커스텀 하는 것이 좋음 -->
+      <div class="bg-slate-100 mt-[20px]">Hellow World</div>
 
       <!-- Padding -->
+      <div class="bg-slate-100 p-2">Hellow World</div>
+      <div class="bg-slate-100 pl-4">Hellow World</div>
+      <div class="bg-slate-100 pr-4">Hellow World</div>
+      <div class="bg-slate-100 pt-4">Hellow World</div>
+      <div class="bg-slate-100 pb-4">Hellow World</div>
+      <div class="bg-slate-100 pt-[20px]">Hellow World</div>
 
       <!-- Space Between X -->
+      <div class="flex mt-24 space-x-4">
+        <div>Item 1</div>
+        <div>Item 2</div>
+        <div>Item 3</div>
+        <div>Item 4</div>
+        <div>Item 5</div>
+        <div>Item 6</div>
+        <div>Item 7</div>
+      </div>
 
       <!-- Space Between Y -->
+      <div class="flex flex-col mt-24 space-y-4">
+        <div>Item 1</div>
+        <div>Item 2</div>
+        <div>Item 3</div>
+        <div>Item 4</div>
+        <div>Item 5</div>
+        <div>Item 6</div>
+        <div>Item 7</div>
+      </div>
     </div>
   </body>
 </html>
