--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -9,12 +9,74 @@
   </head>
   <body>
     <!-- Background Classes -->
+    <div
+      class="h-64 w-72 bg-no-repeat bg-cover bg-center"
+      style="background-image: url('../assets/img/img1.jpg')"
+    ></div>
 
     <!-- Gradients -->
+    <div class="h-24 bg-gradient-to-l from-cyan-500 to-blue-500"></div>
 
     <!-- Shadows -->
+    <div class="w-96 mt-6 ml-4 p-3 shadow">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-md">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-lg">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-xl">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-inner">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-blue-500/50">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-red-500">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-blue-500">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos totam
+      in nobis fuga rem voluptatem dolore ex officia corrupti, repudiandae
+      numquam fugiat provident quae commodi, facere assumenda cumque, quas modi.
+    </div>
 
+    <!-- 잘 사용되지 않는 옵션임 -->
     <!-- Mix Blend -->
+    <div class="flex justify-center -space-x-24">
+      <div class="mix-blend-multiply bg-blue-400">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+        obcaecati accusamus, earum laudantium quasi deserunt nemo ea!
+        Voluptatum, adipisci et.
+      </div>
+      <div class="mix-blend-multiply bg-pink-400">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quas in ea
+        fuga nemo id animi excepturi aspernatur quo asperiores.
+      </div>
+    </div>
   </body>
 </html>
 
