--- a/10-interactivity/index.html
+++ b/10-interactivity/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,25 +9,147 @@
   </head>
   <body>
     <!-- Hover State Styling -->
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 hover:bg-orange-500 hover:text-white"
+    >
+      Submit
+    </button>
 
     <!-- Focus State Styling -->
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 focus:bg-green-500 focus:text-white"
+    >
+      Submit
+    </button>
 
     <!-- Active State Styling -->
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 active:bg-yellow-500 active:text-white"
+    >
+      Submit
+    </button>
 
     <!-- Styling based on parent state -->
+    <a
+      href=""
+      class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-3 hover:bg-sky-500"
+    >
+      <h3 class="group-hover:text-white">Card Title</h3>
+      <p class="group-hover:text-white">This is the card text</p>
+    </a>
 
     <!-- Pseudo Classes -->
+    <ul>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        Item 1
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        Item 2
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        Item 3
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        Item 4
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        Item 5
+      </li>
+      <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">
+        Item 6
+      </li>
+    </ul>
 
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
+    <select class="appearance-none">
+      <option value="Yes">Yes</option>
+      <option value="No">No</option>
+    </select>
 
+    <br />
     <!-- Cursor -->
+    <button
+      class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-not-allowed"
+    >
+      Submit
+    </button>
+
+    <p class="cursor-pointer">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, enim.
+    </p>
 
     <!-- Resize -->
 
     <!-- User Select -->
+    <div class="select-none">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, vero?
+    </div>
+    <div class="select-text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, vero?
+    </div>
+    <div class="select-all">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, vero?
+    </div>
+    <div class="select-auto">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, vero?
+    </div>
 
+    <a href="#item" class="block my-6">go to item</a>
     <!-- Smooth Scroll Example -->
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptate
+      commodi consequuntur doloremque vero! Magni, laborum! Deserunt doloremque
+      quidem ut, nostrum suscipit fugiat quia cupiditate dignissimos! Eveniet
+      nostrum numquam veniam, adipisci fugit aspernatur quasi repellendus in
+      fugiat, quam eius ratione eligendi accusantium ab molestiae sit
+      doloremque. Voluptatum iure commodi quod quidem nesciunt nisi, fugiat
+      ipsum aliquid soluta perspiciatis. Ipsam ad ratione animi. Nihil amet
+      repellendus labore voluptatem a quod, dolores ullam asperiores sunt
+      accusantium quo architecto quia tenetur dolorem excepturi pariatur alias.
+      Atque aliquid veniam ducimus autem, est quis! Maxime molestias odio
+      voluptatem fugiat sit sapiente omnis, expedita ullam. Sit inventore error,
+      sed explicabo natus doloribus hic doloremque molestiae labore nam odit
+      quibusdam, iusto odio, expedita deserunt? Tenetur obcaecati magnam ipsam
+      tempora aliquam ducimus consequuntur. Possimus, debitis. Saepe tempore
+      officiis, deleniti blanditiis porro provident eos quasi? Pariatur odit
+      officia repudiandae illum repellat, quos quidem, iure fuga tenetur animi
+      quisquam in minus saepe omnis reiciendis, alias aliquam non adipisci
+      temporibus dolore ad illo repellendus at quae! Voluptatem atque quasi eius
+      omnis suscipit rerum incidunt, facere laudantium rem excepturi odio veniam
+      distinctio obcaecati amet quae magnam at? Provident atque deleniti dicta,
+      dolore, dignissimos earum eligendi laborum ex rem natus nobis neque velit
+      ad molestiae est delectus perspiciatis vitae iste distinctio accusamus
+      facilis voluptates odit dolores quidem? Repudiandae harum velit temporibus
+      expedita explicabo quidem recusandae quasi reprehenderit cum adipisci eum
+      ipsam, perferendis deleniti assumenda esse? Consectetur accusamus
+      blanditiis placeat debitis deserunt doloribus ipsum, exercitationem esse.
+      Nobis laudantium laboriosam ad sequi quam officia, delectus maiores
+      molestias? Molestias vero laborum ex, commodi quam quia quos? Totam sequi
+      vitae delectus maiores, atque omnis possimus obcaecati sapiente, alias
+      porro temporibus, sint mollitia tempora quam autem odio a velit
+      consequuntur ad quos enim ullam cupiditate! Delectus sint quia odio,
+      tenetur error at consequatur mollitia incidunt itaque! Reprehenderit at ex
+      sunt unde, vel, exercitationem maiores aperiam fuga inventore quam
+      consequatur aut, voluptates architecto quas! Similique assumenda
+      aspernatur voluptates architecto nulla saepe ratione, tempore sint iure
+      error non accusamus ipsum, distinctio, suscipit quidem sunt hic. Sunt
+      obcaecati magnam deleniti dolor, repellat sint possimus eum. Quaerat illum
+      libero maxime adipisci suscipit veniam fuga nisi exercitationem deleniti
+      quod modi numquam sint vero, illo placeat quis saepe hic asperiores
+      tenetur? Porro, fugiat. Enim, voluptatem illum! Minus id hic porro
+      quibusdam ab ullam natus eligendi architecto fugiat facilis ipsum optio
+      non ratione distinctio magni, inventore, modi facere doloremque! Incidunt
+      magni atque veritatis? Dolorum, iste?
+    </p>
+    <div id="item">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio totam
+      illo, mollitia possimus, eaque magnam debitis voluptates odio placeat
+      delectus sequi tempora in, dignissimos quis. Ad, fugit molestias aperiam
+      beatae ipsum totam tempore dolor maiores magni vitae. Eligendi, voluptatum
+      iure itaque reprehenderit quo saepe necessitatibus debitis sed harum vero
+      mollitia.
+    </div>
   </body>
 </html>
 
